--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/rating-state.css">
+  <link rel="stylesheet" href="./styles/thank-you.css">
+
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main class="container">
 
-  <!-- Rating state start -->
+    <article class="ratingstate">
+      <form class="form">
+        <img src="./images/icon-star.svg" alt="Icon Star" class="star">
+        <fieldset class="form-container">
+          <legend class="title">How did we do?</legend>
 
-  How did we do?
+          <p class="subtitle">Please let us know how we did with your support request. All feedback is appreciated
+            to help us improve our offering!</p>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+          <div role="group" id="options"></div>
+          <button type="submit" class="button">Submit</button>
+        </fieldset>
+      </form>
+    </article>
 
-  1 2 3 4 5
+    <article class="thankyou">
+      <img src="./images/illustration-thank-you.svg" alt="#">
+      <p class="result">You selected <span role="text" class="rate"></span> out of 5</p>
 
-  Submit
+      <p class="title">Thank you!</p>
 
-  <!-- Rating state end -->
+      <p class="subtitle">We appreciate you taking the time to give a rating. If you ever need more support,
+        don’t hesitate to get in touch!</p>
+    </article>
 
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/ricmrs">ricmrs</a>.
+    </footer>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <script src="./scripts/options.js"></script>
+  <script src="./scripts/form.js"></script>
 </body>
+
 </html>
