Update HTML markup

--- a/index.html
+++ b/index.html
@@ -22,23 +22,21 @@
     <article class="ratingstate">
       <form class="form">
         <img src="./images/icon-star.svg" alt="Icon Star" class="star">
-        <fieldset class="form-container">
-          <legend class="title">How did we do?</legend>
+        <h1 class="title">How did we do?</h1>
 
-          <p class="subtitle">Please let us know how we did with your support request. All feedback is appreciated
-            to help us improve our offering!</p>
+        <p class="subtitle">Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!</p>
 
-          <div role="group" id="options"></div>
-          <button type="submit" class="button">Submit</button>
-        </fieldset>
+        <div role="group" id="options"></div>
+        <button type="submit" class="button">Submit</button>
       </form>
     </article>
 
     <article class="thankyou">
       <img src="./images/illustration-thank-you.svg" alt="#">
-      <p class="result">You selected <span role="text" class="rate"></span> out of 5</p>
+      <p class="result">You selected <span class="rate"></span> out of 5</p>
 
-      <p class="title">Thank you!</p>
+      <h2 class="title">Thank you!</h2>
 
       <p class="subtitle">We appreciate you taking the time to give a rating. If you ever need more support,
         don’t hesitate to get in touch!</p>
@@ -49,7 +47,7 @@
       Coded by <a href="https://github.com/ricmrs">ricmrs</a>.
     </footer>
   </main>
-  
+
   <script src="./scripts/options.js"></script>
   <script src="./scripts/form.js"></script>
 </body>
